it says m is not valid for TC358743_AUDIO

--- a/arch/arm/configs/imx_v7_nightcrawler_defconfig
+++ b/arch/arm/configs/imx_v7_nightcrawler_defconfig
@@ -461,7 +461,7 @@ CONFIG_MXC_CAMERA_OV5640_MIPI=m
 CONFIG_MXC_CAMERA_OV5640_MIPI_V2=m
 CONFIG_MXC_CAMERA_OV5647_MIPI=m
 CONFIG_MXC_HDMI_CSI2_TC358743=m
-CONFIG_TC358743_AUDIO=m
+CONFIG_TC358743_AUDIO=y
 CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
 CONFIG_MXC_IPU_PRP_ENC=m
