make both KSZ switches as modules

--- a/arch/arm/configs/imx_v7_nightcrawler_defconfig
+++ b/arch/arm/configs/imx_v7_nightcrawler_defconfig
@@ -218,7 +218,10 @@ CONFIG_TUN=m
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KSZ_PTP is not set
 CONFIG_KSZ_SWITCHES=y
-CONFIG_SPI_KSZ8795=y
+CONFIG_HAVE_KSZ8795=y
+CONFIG_SPI_KSZ8795=m
+CONFIG_HAVE_KSZ9897=y
+CONFIG_SPI_KSZ9897=m
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MYRI is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
