match module setting for spi-ksz*

--- a/arch/arm/configs/imx_v7_iris2_defconfig
+++ b/arch/arm/configs/imx_v7_iris2_defconfig
@@ -218,7 +218,9 @@ CONFIG_TUN=m
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KSZ_PTP is not set
 CONFIG_KSZ_SWITCHES=y
-CONFIG_SPI_KSZ9897=y
+CONFIG_KSZ_MRP=n
+CONFIG_SPI_KSZ8795=m
+CONFIG_SPI_KSZ9897=m
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MYRI is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
@@ -461,7 +463,7 @@ CONFIG_MXC_CAMERA_OV5640_MIPI=m
 CONFIG_MXC_CAMERA_OV5640_MIPI_V2=m
 CONFIG_MXC_CAMERA_OV5647_MIPI=m
 CONFIG_MXC_HDMI_CSI2_TC358743=m
-# CONFIG_TC358743_AUDIO is not set
+CONFIG_TC358743_AUDIO=m
 CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
 CONFIG_MXC_IPU_PRP_ENC=m
