align with iris2 defconfig; TC358743_AUDIO is a module and AS6200 (not present) is a module also

--- a/arch/arm/configs/imx_v7_nightcrawler_defconfig
+++ b/arch/arm/configs/imx_v7_nightcrawler_defconfig
@@ -463,7 +463,7 @@ CONFIG_MXC_CAMERA_OV5640_MIPI=m
 CONFIG_MXC_CAMERA_OV5640_MIPI_V2=m
 CONFIG_MXC_CAMERA_OV5647_MIPI=m
 CONFIG_MXC_HDMI_CSI2_TC358743=m
-CONFIG_TC358743_AUDIO=y
+CONFIG_TC358743_AUDIO=m
 CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
 CONFIG_MXC_IPU_PRP_ENC=m
@@ -607,7 +607,7 @@ CONFIG_IIO=y
 CONFIG_IMX7D_ADC=y
 CONFIG_VF610_ADC=y
 CONFIG_MPL3115=y
-# CONFIG_AS6200 is not set
+CONFIG_AS6200=m
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
 CONFIG_PWM_TPM=y
